# minor

./: .gitignore  net.py  preprocess.py  pyproject.toml  text_classification.py
preprocessed/: 1902F2001.csv  1902F2001.json  1902F2002.csv  1902F2002.json  1902F3001.csv  1902F3001.json  1902F3002.csv  1902F3002.json  1902F4001.csv  1902F4001.json  1902F4002.csv  1902F4002.json  1902F4003.csv  1902F4003.json  1902F4004.csv  1902F4004.json  1902F4005.csv  1902F4005.json  1902F4006.csv  1902F4006.json  1902F4007.json  1902F4008.csv  1902F4008.json  1902F4009.csv  1902F4009.json  1902F4010.csv  1902F4010.json  1902F4011.csv  1902F4011.json  1902F6001.csv  1902F6001.json  1902F6002.csv  1902F6002.json  1902F7001.csv  1902F7001.json  1902F7002.csv  1902F7002.json  1902F7003.csv  1902F7003.json  1902M2001.csv  (+18 more)
