[tool.poetry]
name = "hazumi1902"
version = "0.1.0"
description = ""
authors = ["Dash400air_lab <s2110137@jaist.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tqdm = "^4.66.1"
pandas = "^2.1.3"
jupyter = "^1.0.0"
openai = "^1.3.2"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
