[tool.poetry]
name = "hazumi1902"
version = "0.1.0"
description = ""
authors = ["Dash400air_lab <s2110137@jaist.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tqdm = "^4.66.1"
pandas = "^2.1.3"
jupyter = "^1.0.0"
openai = "^1.3.2"
scikit-learn = "^1.3.2"
vibrato = "^0.2.0"
zstandard = "^0.22.0"
umap-learn = "^0.5.5"
wordcloud = "^1.9.2"
lightning = "^2.1.2"
captum = "^0.6.0"
torch = {version = "^2.1.1+cu118", source = "torch_cu118"}


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
